<resources>
    <string name="app_name">BJJ Scoreboard</string>

    <string name="rearMount">Rear mount</string>
    <string name="mount">Mount</string>
    <string name="back">Back</string>
    <string name="guardPass">Guard pass</string>
    <string name="takeDown">Takedown</string>
    <string name="sweep">Sweep</string>
    <string name="kneeOnBelly">Knee on belly</string>

    <string name="adv">ADV</string>
    <string name="pen">PEN</string>

    <string name="advantage">Advantage</string>
    <string name="penalty">Penalty</string>

    <string name="scored4">Scored 4</string>
    <string name="scored3">Scored 3</string>
    <string name="scored2">Scored 2</string>

    <string name="combate">Combate!</string>
    <string name="end">end</string>
    <string name="matchStartedWarningMsg">Match has started. Are you sure you want to close this app?</string>

    <string name="defaultLeftPlayerName">Royler Gracie</string>
    <string name="defaultRightPlayerName">Eddie Bravo</string>

    <string name="menuTitle">Menu</string>


    <string name="viewMode">View mode</string>
    <string name="players">Players</string>
    <string name="feedBack">Feedback</string>
    <string name="vibrateOnScoreChange">Vibrate on score change</string>
    <string name="buzzer">Buzzer on match end</string>
    <string name="matchLength">Match length</string>

    <string name="basicViewMode">Basic</string>
    <string name="advancedViewMode">Advanced</string>

    <string name="editing">Editing %1$s</string>

    <string name="winByTap">%1$s submits %2$s</string>
    <string name="winByDQ">%1$s defeats %2$s via disqualification</string>
    <string name="tieMsg">Draw</string>

    <string name="winnerByPointsMsg">Winner by points</string>
    <string name="winnerBySubmissionMsg">Winner by submission</string>
    <string name="winnerByDQMsg">Winner by DQ</string>

    <string name="falseStart">False start</string>
    <string name="matchEnd">Match end</string>
</resources>
