<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_menu_options_rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/menuBackgroundColor"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:theme="@android:style/Theme.Holo.Light.DarkActionBar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/header_top_padding"
                android:text="@string/viewMode"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/basicViewMode_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/basicViewMode" />

                <RadioButton
                    android:id="@+id/advanceViewMode_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/advancedViewMode" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/header_top_padding"
                android:text="@string/players"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/playerLeft_et"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/defaultLeftPlayerName" />

                    <EditText
                        android:id="@+id/playerRight_et"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/defaultRightPlayerName" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/playerColorLeft_spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Spinner
                        android:id="@+id/playerColorRight_spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/header_top_padding"
                android:text="@string/matchLength"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.jam.bjjscoreboard.widget.NumberPicker
                    android:id="@+id/minutes_numberPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    app:np_dividerColor="@color/colorAccent"
                    app:np_formatter="@string/number_picker_formatter"
                    app:np_max="59"
                    app:np_min="0"
                    app:np_textColor="@color/colorAccent"
                    app:np_textSize="30dp"
                    app:np_typeface="@string/roboto_light" />

                <com.jam.bjjscoreboard.widget.NumberPicker
                    android:id="@+id/seconds_numberPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    app:np_dividerColor="@color/colorAccent"
                    app:np_formatter="@string/number_picker_formatter"
                    app:np_max="59"
                    app:np_min="0"
                    app:np_textColor="@color/colorAccent"
                    app:np_textSize="30dp"
                    app:np_typeface="@string/roboto_light" />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/header_top_padding"
                android:text="@string/feedBack"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <CheckBox
                android:id="@+id/vibrate_cb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vibrateOnScoreChange" />

            <CheckBox
                android:id="@+id/buzzer_cb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buzzer" />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/closeMenu_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_button_height"
        android:layout_centerHorizontal="true"
        android:src="@drawable/menu_button" />
</LinearLayout>